--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "grid-editor-backend",
-  "version": "0.0.1",
-  "main": "index.js",
+  "name": "backend",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build:ui": "del build && cd ..\\client && npm run build --prod && copy build ..\\backend\\build\\"
+    "build:ui": "del /s /q public && cd ..\\client && npm run build --prod && xcopy build ..\\backend\\public\\ /s",
+    "start": "node ./bin/www",
+    "watch": "nodemon ./bin/www"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^4.17.1"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "morgan": "~1.9.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
