--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "@typescript-eslint/parser": "^2.28.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-airbnb-typescript": "^7.2.1",
     "eslint-plugin-import": "^2.20.1",
     "nodemon": "^2.0.2",
     "typescript": "^3.8.3"
