--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build:ui": "del /s /q public && cd ..\\client && npm run build --prod && xcopy build ..\\backend\\public\\ /s",
-    "start": "node ./bin/www",
-    "watch": "nodemon ./bin/www",
+    "build:ui": "del /s /q public && cd ..\\client && npm run build --prod && xcopy build ..\\backend\\dist\\public\\ /s",
+    "start": "npx tsc && node ./dist/bin/www.js",
+    "watch": "nodemon ./src/bin/www",
     "deploy": "git push heroku master",
     "commit": "git add . && git commit -m \"deploy\"",
     "deploy:full": "npm run build:ui && npm run commit && npm run deploy"
@@ -14,9 +14,14 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "save-dev": "0.0.1-security",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.6",
+    "@types/morgan": "^1.9.0",
+    "@types/node": "^13.13.4",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.28.0",
     "eslint": "^6.8.0",
