--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "name": "backend",
   "version": "0.0.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "scripts": {
     "build:ui": "del /s /q public && cd ..\\client && npm run build --prod && xcopy build ..\\backend\\dist\\public\\ /s",
     "build": "npx tsc",
@@ -12,7 +13,9 @@
     "deploy:full": "npm run build:ui && npm run commit && npm run deploy"
   },
   "dependencies": {
+    "@types/cors": "^2.8.6",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
