--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.6",
+    "@types/mongoose": "^5.7.15",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "mongoose": "^5.9.12",
     "morgan": "~1.9.1",
     "save-dev": "0.0.1-security",
     "typescript": "^3.8.3"
