--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^25.1.4",
     "@types/node": "^13.9.0",
@@ -42,6 +43,8 @@
     ]
   },
   "devDependencies": {
+    "@iconify/icons-mdi": "^1.0.105",
+    "@iconify/react": "^1.1.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@types/react-redux": "^7.1.7",
