--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,8 @@
     "mongoose": "^5.9.12",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
+    "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
     "save-dev": "0.0.1-security",
     "typescript": "^3.8.3"
   },
@@ -31,6 +33,8 @@
     "@types/express": "^4.17.6",
     "@types/morgan": "^1.9.0",
     "@types/node": "^13.13.4",
+    "@types/passport": "^1.0.3",
+    "@types/passport-google-oauth": "^1.0.41",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.28.0",
     "eslint": "^6.8.0",
