--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "googleapis": "^52.1.0",
     "mongoose": "^5.9.12",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
