--- a/backend/package.json
+++ b/backend/package.json
@@ -25,22 +25,23 @@
     "mongoose": "^5.9.12",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
-    "save-dev": "0.0.1-security",
-    "typescript": "^3.8.3"
+    "save-dev": "0.0.1-security"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/morgan": "^1.9.0",
     "@types/node": "^13.13.4",
-    "@typescript-eslint/eslint-plugin": "^2.24.0",
-    "@typescript-eslint/parser": "^2.28.0",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-airbnb-typescript": "^7.2.1",
     "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.0",
     "nodemon": "^2.0.2",
     "ts-node": "^8.10.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.5"
   },
   "nodemonConfig": {
     "ignore": [
