--- a/backend/package.json
+++ b/backend/package.json
@@ -6,18 +6,23 @@
   "scripts": {
     "build:ui": "del /s /q public && cd ..\\client && npm run build --prod && xcopy build ..\\backend\\dist\\public\\ /s",
     "build": "npx tsc",
-    "start": "node ./dist/bin/www",
-    "start:watch": "nodemon",
+    "start": "cross-env NODE_ENV=production node ./dist/bin/www",
+    "start:watch": "cross-env NODE_ENV=development nodemon",
     "deploy": "git push heroku master",
     "commit": "git add . && git commit -m \"deploy\"",
-    "deploy:full": "npm run build:ui && npm run commit && npm run deploy"
+    "deploy:full": "npm run build:ui && npm run commit && npm run deploy",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand"
   },
   "dependencies": {
+    "@babel/preset-typescript": "^7.10.1",
     "@types/cors": "^2.8.6",
+    "@types/mocha": "^7.0.2",
     "@types/mongoose": "^5.7.15",
     "@types/mongoose-unique-validator": "^1.0.4",
+    "@types/supertest": "^2.0.9",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
@@ -28,18 +33,23 @@
     "save-dev": "0.0.1-security"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
     "@types/express": "^4.17.6",
     "@types/morgan": "^1.9.0",
     "@types/node": "^13.13.4",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
+    "babel-jest": "^26.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-airbnb-typescript": "^7.2.1",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.0",
+    "jest": "^26.1.0",
     "nodemon": "^2.0.2",
+    "supertest": "^4.0.2",
     "ts-node": "^8.10.1",
     "typescript": "^3.9.5"
   },
@@ -55,5 +65,8 @@
     ],
     "exec": "npm start",
     "ext": "ts"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
