--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@babel/preset-typescript": "^7.10.1",
     "@types/cors": "^2.8.6",
-    "@types/mocha": "^7.0.2",
+    "@types/jest": "^26.0.3",
     "@types/mongoose": "^5.7.15",
     "@types/mongoose-unique-validator": "^1.0.4",
     "@types/supertest": "^2.0.9",
@@ -50,6 +50,7 @@
     "jest": "^26.1.0",
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2",
+    "ts-jest": "^26.1.1",
     "ts-node": "^8.10.1",
     "typescript": "^3.9.5"
   },
@@ -67,6 +68,11 @@
     "ext": "ts"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ]
   }
 }
