Fixes a mistake from previous commit

--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/**",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "start:test": "cross-env NODE_ENV=test node index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
