Enables Cypress testing

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
     "deploy": "git push heroku master",
     "commit": "git add . && git commit -m \"deploy\"",
     "deploy:full": "npm run build:ui && npm run commit && npm run deploy",
-    "test": "cross-env NODE_ENV=test jest --verbose --runInBand"
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
+    "start:test": "cross-env NODE_ENV=test nodemon"
   },
   "dependencies": {
     "@babel/preset-typescript": "^7.10.1",
