--- a/client/package.json
+++ b/client/package.json
@@ -22,8 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/**",
-    "cypress:open": "cypress open",
-    "start:test": "cross-env NODE_ENV=test node index.js"
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": "react-app"
