--- a/client/package.json
+++ b/client/package.json
@@ -14,14 +14,21 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "redux-undo": "^1.0.1",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.6",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@iconify/icons-mdi": "^1.0.115",
+    "@iconify/react": "^1.1.3",
+    "@testing-library/jest-dom": "^4.2.4"
+    
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src/**",
+    "lint": "eslint src/** cypress/**",
     "cypress:open": "cypress open"
   },
   "eslintConfig": {
@@ -40,12 +47,6 @@
     ]
   },
   "devDependencies": {
-    "@iconify/icons-mdi": "^1.0.115",
-    "@iconify/react": "^1.1.3",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^25.2.3",
