--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@iconify/icons-mdi": "^1.0.115",
+    "@iconify/react": "^1.1.3",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@testing-library/jest-dom": "^4.2.4",
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -14,14 +20,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "redux-undo": "^1.0.1",
-    "typescript": "^3.9.6",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@iconify/icons-mdi": "^1.0.115",
-    "@iconify/react": "^1.1.3",
-    "@testing-library/jest-dom": "^4.2.4"
-    
+    "typescript": "^3.9.6"
   },
   "scripts": {
     "start": "react-scripts start",
