--- a/client/package.json
+++ b/client/package.json
@@ -59,6 +59,7 @@
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "cypress": "^4.9.0",
+    "cypress-social-logins": "^1.4.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-airbnb-typescript": "^7.2.1",
