--- a/client/package.json
+++ b/client/package.json
@@ -58,7 +58,8 @@
     "@types/redux-mock-store": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
-    "cypress": "^4.9.0",
+    "cypress": "^4.11.0",
+    "cypress-localstorage-commands": "^1.2.1",
     "cypress-social-logins": "^1.4.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.2.0",
