--- a/client/package.json
+++ b/client/package.json
@@ -67,6 +67,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^2.5.1",
+    "jest-mock-axios": "^4.2.1",
     "redux-mock-store": "^1.5.4"
   }
 }
