--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,8 @@ jobs:
         name: node/default
         tag: '10.4'
       steps:
-        - cd backend && node/test
+        - checkout
+        - run: cd backend && npm test
 workflows:
   version: 2.1
   backend_jobs:
