--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2.1
 orbs:
   node: circleci/node@3.0.0
+  heroku: circleci/heroku@1.2.0
 
 jobs:
   backend:
@@ -19,9 +20,25 @@ jobs:
       - checkout
       - run: cd client && npm install
       - run: cd client && npm test
+  build:
+    executor:
+      name: node/default
+      tag: '12.16'
+    steps:
+      - checkout
+      - run: cd backend && npm build && npm build:ui
 workflows:
   version: 2.1
   test_jobs:
     jobs:
       - backend
       - frontend
+      - build
+        requires: 
+          - backend
+          - frontend
+      - heroku/deploy-via-git:
+        requires: 
+          - build
+        pre-steps:
+          - run: cd backend
