--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "proxy": "http://localhost:3001",
   "scripts": {
     "build:ui": "del /s /q public && cd ..\\client && npm run build --prod && xcopy build ..\\backend\\dist\\public\\ /s",
-    "build": "npx tsc",
+    "build": "tsc",
     "start": "cross-env NODE_ENV=production node ./dist/bin/www",
     "start:watch": "cross-env NODE_ENV=development nodemon",
     "deploy": "git push heroku master",
