--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       tag: '12.16'
     steps:
       - checkout
-      - run: cd backend && npm run build && npm run build:ui
+      - run: cd backend && npm run build:ui
 workflows:
   version: 2.1
   test_jobs:
