--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,11 +31,10 @@ jobs:
       - run: cd backend && npm run build:ui
 workflows:
   version: 2.1
-  test_jobs:
+  test_and_deploy_jobs:
     jobs:
     - backend
     - frontend
-  deploy_jobs:
     - build
     - heroku/deploy-via-git:
         requires: 
