--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,12 +23,12 @@ jobs:
       - run: cd client && npm test
   build:
     executor:
-      name: win/default
-      shell: bash.exe
+      name: node/default
+      tag: '12.16'
     steps:
       - checkout
-      - run: cd backend && npm install
-      - run: cd backend && npm run build:ui
+      - run: cd client && npm install
+      - run: cd client && npm run build
 workflows:
   version: 2.1
   test_and_deploy_jobs:
@@ -36,8 +36,8 @@ workflows:
     - backend
     - frontend
     - build
-    - heroku/deploy-via-git:
-        requires: 
-          - build
-        pre-steps:
-          - run: cd backend
+#    - heroku/deploy-via-git:
+#        requires: 
+#          - build
+#        pre-steps:
+#          - run: cd backend
