--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,9 @@ jobs:
       - checkout
       - run: cd client && npm install
       - run: cd client && npm run build
+
+      - store_artifacts:
+        path: /tmp/artifact-frontend
 workflows:
   version: 2.1
   test_and_deploy_jobs:
