--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,9 @@ jobs:
       - run: cd client && npm install
       - run: cd client && npm test
   build:
-    executor: default
+    executor:
+      name: node/default
+      tag: '12.16'
     steps:
       - attach_workspace:
         at: ~/
