--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,8 +27,7 @@ jobs:
       name: node/default
       tag: '12.16'
     steps:
-      - run:
-        command: mkdir -p artifacts
+      - run: mkdir -p artifacts
       - checkout
       - run: cd client && npm install
       - run: cd client && npm run build
