--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,20 +27,24 @@ jobs:
       name: node/default
       tag: '12.16'
     steps:
-      - run: mkdir -p artifacts
+      - attach_workspace:
+          at: ~/
+          
+      - run: cd client && mkdir -p artifacts
       - checkout
       - run: cd client && npm install
       - run: cd client && npm run build
       - run: cd client && cp -r build artifacts
+
+      - store_artifacts:
+        path: ./artifacts
 workflows:
   version: 2.1
   test_and_deploy_jobs:
     jobs:
     - backend
     - frontend
-    - react/build
-      pre-steps:
-        - run: cd backend
+    - build
 #    - heroku/deploy-via-git:
 #        requires: 
 #          - build
