--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,10 @@ jobs:
       - checkout
       - run: cd backend && npm install
       - run: cd backend && npm run build
-      - run: cp -r artifacts backend/dist/public
+      # - run: cp -r artifacts backend/dist/public
+      - run: cd backend && curl -H "Circle-Token: $CIRCLE_TOKEN" https://circleci.com/api/v1.1/project/github/@CIRCLE_PROJECT_USERNAME/@CIRCLE_PROJECT_REPONAME/latest/artifacts \
+        | grep -o 'https://[^"]*' \
+        | wget --verbose --header "Circle-Token: $CIRCLE_TOKEN" --input-file -
 
 workflows:
   version: 2.1
