--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,6 +56,7 @@ workflows:
         requires:
           - backend
     - heroku/deploy-via-git:
-        force: true
+        parameters:
+          force: true
         requires: 
           - build_client
