--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,10 @@ jobs:
       - run: cd backend && npm run build
     
   deploy:
+    executor: heroku/default
     steps:
+      - checkout
+      - heroku/install
       - heroku/deploy-via-git:
         force: true
       
