--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,12 +44,11 @@ jobs:
     
   deploy:
     executor: heroku/default
+    working_directory: ~/grid-editor/backend
     steps:
-      - checkout:
-          working_directory: backend
+      - checkout
       - heroku/install
       - heroku/deploy-via-git:
-          working_directory: backend
           force: true
       
 workflows:
