--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,12 +44,35 @@ jobs:
     
   deploy:
     executor: heroku/default
-    working_directory: ~/grid-editor/backend
+    api-key:
+      default: HEROKU_API_KEY
+      type: env_var_name
+    app-name:
+      default: $HEROKU_APP_NAME
+      type: string
+    branch:
+      default: $CIRCLE_BRANCH
+      type: string
+
     steps:
       - checkout
       - heroku/install
-      - heroku/deploy-via-git:
-          force: true
+      # - git subtree push -f --prefix backend heroku master
+      # - heroku/deploy-via-git:
+      #     force: true
+      - run:
+        command: >
+          heroku_url = "https://heroku:$<< parameters.api-key >>@git.heroku.com/<<
+          parameters.app-name >>.git"
+
+          if [ -z "<< parameters.branch >>" ]; then
+            git subtree push --prefix backend $heroku_url << parameters.branch >>:master -f
+          elif [ -z "<< parameters.tag >>" ]; then
+            git subtree push $heroku_url << parameters.tag >>^{}:master -f
+          else
+            echo "No branch or tag found."
+            exit 1
+          fi
       
 workflows:
   version: 2.1
