--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,15 +44,16 @@ jobs:
     
   deploy:
     executor: heroku/default
-    api-key:
-      default: HEROKU_API_KEY
-      type: env_var_name
-    app-name:
-      default: $HEROKU_APP_NAME
-      type: string
-    branch:
-      default: $CIRCLE_BRANCH
-      type: string
+    parameters:
+      api-key:
+        default: HEROKU_API_KEY
+        type: env_var_name
+      app-name:
+        default: $HEROKU_APP_NAME
+        type: string
+      branch:
+        default: $CIRCLE_BRANCH
+        type: string
 
     steps:
       - checkout
@@ -60,6 +61,12 @@ jobs:
       # - git subtree push -f --prefix backend heroku master
       # - heroku/deploy-via-git:
       #     force: true
+      - when:
+        condition: << parameters.maintenance-mode >>
+        steps:
+          - run:
+              command: 'heroku maintenance:on --app << parameters.app-name >>'
+              name: Turn ON maintenance mode.
       - run:
         command: >
           heroku_url = "https://heroku:$<< parameters.api-key >>@git.heroku.com/<<
