--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,10 @@ jobs:
         default: $HEROKU_APP_NAME
         type: string
       branch:
-        default: $CIRCLE_BRANCH
+        default: master #$CIRCLE_BRANCH
+        type: string
+            app-name:
+      default: $CIRCLE_TAG
         type: string
 
     steps:
