--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,7 +73,7 @@ jobs:
             heroku_url="https://heroku:$<< parameters.api-key >>@git.heroku.com/<<
             parameters.app-name >>.git"
 
-            if [ -z "<< parameters.branch >>" ]; then
+            if [ -n "<< parameters.branch >>" ]; then
               git push origin `git subtree split --prefix backend $heroku_url << parameters.branch >>`:master --force              
             else
               echo "No branch or tag found."
