--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,13 +86,13 @@ workflows:
     jobs:
     - backend
     - frontend
-    - build_client:
-        requires: 
-          - frontend
-          - build_backend
-    - build_backend:
-        requires:
-          - backend
+    # - build_client:
+    #     requires: 
+    #       - frontend
+    #       - build_backend
+    # - build_backend:
+    #     requires:
+    #      - backend
     - deploy:
         requires: 
           - build_client
