--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,10 +86,10 @@ workflows:
     jobs:
     - backend
     - frontend
-    # - build_client:
-    #     requires: 
-    #       - frontend
-    #       - build_backend
+    - build_client:
+        requires: 
+          - frontend
+          - build_backend
     # - build_backend:
     #     requires:
     #      - backend
