--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,7 +89,7 @@ workflows:
     - build_client:
         requires: 
           - frontend
-          - build_backend
+    #      - build_backend
     # - build_backend:
     #     requires:
     #      - backend
