--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,6 +65,7 @@ jobs:
 
       - attach_workspace:
           at: /tmp/grid-editor
+      - run: cd /tmp/grid-editor && ls -a
       - run: cp -r /tmp/grid-editor/client/build backend/dist/public
       - run: cd backend/dist/public/ && ls -a
 
