--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
       - attach_workspace:
           at: /tmp/grid-editor
       - run: cp -a /tmp/grid-editor/client/build/. backend/dist/public/
-      - run: cd backend && npm run commit
+      - run: cd backend && git add . && git commit -m \"deploy\"
 
       - heroku/install
       # - heroku/deploy-via-git:
