--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,9 @@ jobs:
       - attach_workspace:
           at: /tmp/grid-editor
       - run: cp -a /tmp/grid-editor/client/build/. backend/dist/public/
-      - run: cd backend && git add . && git commit -m \"deploy\"
+
+      - run: git config user.email "bot@circleci.com" && git config user.name "Heroku Deployment Pipeline"
+      - run: git add . && git commit -m \"deploy\"
 
       - heroku/install
       # - heroku/deploy-via-git:
