--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,13 @@ jobs:
       - checkout
       - run: cd backend && npm install
       - run: cd backend && npm test
+  backend_lint:
+    executor:
+      name: node/default
+      tag: '12.16'
+    steps:
+      - checkout
+      - run: cd backend && npm lint
 
   frontend:
     executor:
@@ -22,6 +29,13 @@ jobs:
       - checkout
       - run: cd client && npm install
       - run: cd client && npm test
+  client_lint:
+    executor:
+      name: node/default
+      tag: '12.16'
+    steps:
+      - checkout
+      - run: cd client && npm lint
 
   build_client:
     executor:
@@ -96,9 +110,13 @@ workflows:
     jobs:
     - backend
     - frontend
+    - backend_lint
+    - client_lint
     - build_client:
         requires: 
           - frontend
+          - client_lint
     - deploy:
         requires: 
           - build_client
+          - backend_lint
