--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grid-editor-client",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "axios": "^0.19.2",
@@ -14,7 +14,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "redux-undo": "^1.0.1",
-    "typescript": "^3.9.6"
+    "@material-ui/core": "^4.11.0",
+    "@testing-library/jest-dom": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,10 +44,8 @@
   "devDependencies": {
     "@iconify/icons-mdi": "^1.0.115",
     "@iconify/react": "^1.1.3",
-    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^25.2.3",
@@ -69,6 +68,7 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^2.5.1",
     "jest-mock-axios": "^4.2.1",
-    "redux-mock-store": "^1.5.4"
+    "redux-mock-store": "^1.5.4",
+    "typescript": "^3.9.6"
   }
 }
