Revert "Update tsconfig.json"
This reverts commit c7a39d4b8c3101579a9173e6e062845b269c71e8.

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -18,6 +18,6 @@
         "types": ["node"] 
     },
     "include": [
-        "src/**/*", "babel.config.js"
+        "./src/*", "babel.config.js"
     ]
 }
