--- a/backend/package.json
+++ b/backend/package.json
@@ -32,14 +32,14 @@
     "mongoose": "^5.9.12",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
-    "save-dev": "0.0.1-security"
-  },
-  "devDependencies": {
+    "save-dev": "0.0.1-security",
     "@babel/core": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
     "@types/express": "^4.17.6",
     "@types/morgan": "^1.9.0",
-    "@types/node": "^13.13.4",
+    "@types/node": "^13.13.4"
+  },
+  "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "babel-jest": "^26.1.0",
