--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,21 +3,25 @@
         "module": "commonjs",
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
-        "target": "es6",
+        "target": "esnext",
         "noImplicitAny": true,
         "moduleResolution": "node",
         "sourceMap": true,
         "outDir": "dist",
         "baseUrl": ".",
+        "lib": ["dom", "ES6"],
         "paths": {
-            "*": [
-                "node_modules/*",
-                "src/types/*"
+            "@/*": [
+              "./*"
             ]
-        },                                                                                                                                                                                 
+          },                                                                                                                                                                                 
         "types": ["node"] 
     },
+    "exclude": [
+        "node_modules",
+        "dist"
+      ],
     "include": [
-        "src/**/*", "babel.config.js"
+        "./src/**/*", "babel.config.js"
     ]
 }
